# adas-perception-risk-system

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
configs/: camera.yaml  detector.yaml  kitti.yaml  lane.yaml  risk_zones.yaml  tracker.yaml  ttc.yaml
data/: README.md
docs/: cv_bullets.md  thesis_proposal.md
outputs/logs/: frame_timings.csv  tracking_results.csv  tracking_results_botsort.csv  warnings.csv
outputs/reports/: demo_metrics.csv  kitti_training_results.csv  tracker_comparison.csv
scripts/: build_report.py  build_slides.py  compute_metrics.py  kitti_to_yolo.py  run_adas_demo.py  run_detection.py  run_evaluation.py  run_tracking.py
src/adas_perception/risk/: distance.py  lane.py  ttc.py  warning_engine.py
src/adas_perception/tracking/: tracker.py
src/adas_perception/utils/: config.py
src/adas_perception/visualization/: annotator.py
